--- a/_betterize.sass
+++ b/_betterize.sass
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.sass -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 1.3.2 -- 03/21/2024 -------------------------------------------- ///
+/// version 1.3.4 -- 03/21/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -120,7 +120,7 @@ html
   overflow-wrap: break-word
   // 7
   -webkit-hyphens: auto
-  // 7
+  -ms-hyphens: auto
   hyphens: auto
   // 8
   -moz-tab-size: 4
@@ -138,7 +138,6 @@ html
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
   // 14
   -webkit-text-size-adjust: 100%
-  // 14
   text-size-adjust: 100%
   // 15
   -ms-overflow-style: scrollbar
@@ -382,9 +381,11 @@ kbd
   inset-block-start: -0.125rem
   display: inline-block
   padding: 4px 8px
-  padding: 0.25rem 0.5rem
-  padding-block: 0.25rem
-  padding-inline: 0.5rem
+  padding: 0.25rem 0.5rem;
+  padding-block-start: 0.25rem
+  padding-block-end: 0.25em
+  padding-inline-start: 0.5rem
+  padding-inline-end: 0.5rem
   border: 1px solid #b4b4b4
   border-radius: 3px
   background-color: #eee
@@ -464,7 +465,8 @@ table > tr
 caption
   padding: 12px 0
   padding: 0.75rem 0
-  padding-block: 0.75rem
+  padding-block-start: 0.75rem
+  padding-block-end: 0.75rem
   color: #6c757d
   caption-side: bottom
   text-align: inherit
@@ -489,8 +491,8 @@ hr:not(.hr-light)
   border: 0
   border-top: 2px solid #808080
   border-top: 2px solid currentColor
-  margin: 0.75em 0
-  margin-block-end: 0.75em
+  margin: 0 0 0.5em
+  margin-block-end: 0.5em
   color: inherit
 
 // If you do not like the look of the modified <hr> above, and you want a more
@@ -606,8 +608,10 @@ input,
 select,
 textarea
   padding: 0.25em 0.375em
-  padding-block: 0.25em
-  padding-inline: 0.375em
+  padding-block-start: 0.25em
+  padding-block-end: 0.25em
+  padding-inline-start: 0.375em
+  padding-inline-end: 0.375em
   border: 1px solid WindowFrame
   background-color: rgba(0, 0, 0, 0)
   color: inherit
@@ -687,8 +691,10 @@ select
 
 select
   padding: 0.125em 1em 0.125em 0.25em
-  padding-block: 0.125em
-  padding-inline: 1em 0.25em
+  padding-block-start: 0.125em
+  padding-block-end: 0.125em
+  padding-inline-start: 0.25em
+  padding-inline-end: 1em
   border-radius: 0
   -webkit-appearance: none
   -moz-appearance: none
@@ -830,10 +836,6 @@ progress
 // just changing the color rather than remembering to overwrite opacity.
 
 :-moz-placeholder
-  color: inherit
-  opacity: 0.54
-
-::-moz-placeholder
   color: inherit
   opacity: 0.54
 
@@ -1132,29 +1134,29 @@ svg:not([fill])
 // Apply flex-based centering to an element directly from markup.
 
 .flex-center
-   // OLD - iOS 6-, Safari 3.1-6, BB7
+  // iOS 6-, Safari 3.1-6, BB7
   display: -webkit-box
-   // OLD - IE 10
+   // IE 10
   display: -ms-flexbox
-   // NEWER - Safari 6.1+. iOS 7.1+, BB10
+   // Safari 6.1+. iOS 7.1+, BB10
   display: -webkit-flex
    // Standard syntax
   display: flex
 
-   // OLD - iOS 6-, Safari 3.1-6
+   // iOS 6-, Safari 3.1-6
   -webkit-box-align: center
-   // OLD - IE 10
+   // IE 10
   -ms-flex-align: center
-   // NEWER - Safari 7.0+ iOS 7+
+   // Safari 7.0+ iOS 7+
   -webkit-align-items: center
    // Standard syntax
   align-items: center
 
-   // OLD - iOS 6-, Safari 3.1-6
+   // iOS 6-, Safari 3.1-6
   -webkit-box-pack: center
-   // OLD - IE 10
+   // IE 10
   -ms-flex-pack: center
-   // NEWER - Safari 6.1+. iOS 7.1+, BB10
+   // Safari 6.1+. iOS 7.1+, BB10
   -webkit-justify-content: center
    // Standard syntax
   justify-content: center
@@ -1173,7 +1175,7 @@ svg:not([fill])
 /// context bugs and common z-index issues.
 ///
 /// @todo If not using React or something similar, delete this rule and comment.
-/// If you are going to use the rule, just delete this todo (or entire comment).
+/// If you are going to use the rule, just delete this comment.
 
 #root,
 #__next
