--- a/_betterize.sass
+++ b/_betterize.sass
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.sass -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 1.3.4 -- 03/21/2024 -------------------------------------------- ///
+/// version 1.3.5 -- 03/23/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -381,7 +381,7 @@ kbd
   inset-block-start: -0.125rem
   display: inline-block
   padding: 4px 8px
-  padding: 0.25rem 0.5rem;
+  padding: 0.25rem 0.5rem
   padding-block-start: 0.25rem
   padding-block-end: 0.25em
   padding-inline-start: 0.5rem
@@ -481,7 +481,7 @@ th
 // and inherits the color of the parent element's text so that it looks good
 // by default on all background colors.
 
-hr:not(.hr-light)
+hr
   display: block
   overflow: hidden
   -webkit-box-sizing: content-box
@@ -489,30 +489,22 @@ hr:not(.hr-light)
   height: 0
   padding: 0
   border: 0
-  border-top: 2px solid #808080
-  border-top: 2px solid currentColor
-  margin: 0 0 0.5em
-  margin-block-end: 0.5em
+  border-top: 1px solid #808080
+  border-top-color: currentColor
+  margin: 1em 0
+  margin: 1rem 0
+  margin-block-start: 1rem
+  margin-block-end: 1rem
   color: inherit
+  opacity: 0.6
 
 // If you do not like the look of the modified <hr> above, and you want a more
-// basic horizontal rule without having to overwrite styling yourself, use the
-// `hr-light` class.
-// 1. Show overflow in legacy Edge and IE.
-// 2. Correct box-sizing in Firefox.
-// 3. Correct the inheritance of border-color in Firefox.
-//    See: (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+// traditional horizontal rule without having to overwrite styling yourself, use
+// the `hr-light` class.
 
-.hr-light
-  // 1
-  overflow: visible
-  // 2
-  -webkit-box-sizing: content-box
-  box-sizing: content-box
-  // 1
-  height: 0
-  // 3
-  color: inherit
+hr.hr-light
+  border-top-color: #ccc
+  opacity: 1
 
 // Add the correct font style in Android 4.3-
 
@@ -1074,8 +1066,7 @@ svg:not([fill])
   position: absolute
   overflow: hidden
   clip: rect(0, 0, 0, 0)
-  -webkit-clip-path: inset(100%)
-  clip-path: inset(100%)
+  clip-path: inset(50%)
   width: 1px
   height: 1px
   padding: 0
@@ -1098,7 +1089,6 @@ svg:not([fill])
   position: static
   overflow: visible
   clip: auto
-  -webkit-clip-path: none
   clip-path: none
   width: auto
   height: auto
@@ -1114,8 +1104,6 @@ svg:not([fill])
 // For all browsers (even IE 6 and up)
 
 .clearfix
-  *zoom: 1
-
   &:before,
   &:after
     content: ' '
