--- a/_betterize.sass
+++ b/_betterize.sass
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.sass -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 1.4.0 -- 03/23/2024 -------------------------------------------- ///
+/// version 1.4.1 -- 03/23/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -819,7 +819,8 @@ progress
   opacity: 0.54
 
 ::placeholder
-  color: rgba(0, 0, 0, 0.54)
+  color: inherit
+  opacity: 0.54
 
 // 1. Correct the inability to style clickable types in iOS and Safari.
 // 2. Change font properties to `inherit` in Safari.
