--- a/betterize.less
+++ b/betterize.less
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.less -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 1.4.0 -- 03/23/2024 -------------------------------------------- ///
+/// version 1.4.1 -- 03/23/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -842,7 +842,8 @@ progress {
 }
 
 ::placeholder {
-  color: rgba(0, 0, 0, 0.54);
+  color: inherit;
+  opacity: 0.54;
 }
 
 // 1. Correct the inability to style clickable types in iOS and Safari.
