--- a/_betterize.scss
+++ b/_betterize.scss
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.scss -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 1.4.1 -- 03/23/2024 -------------------------------------------- ///
+/// version 2.0.0 -- 03/23/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -243,13 +243,17 @@ figcaption {
 }
 
 // 1. Remove the top margin for easier control as it avoids margin collapse.
-// 2. Overwrite bottom margin with margin-block-end for browesers that support it.
+// 2. Overwrite physical margin properties with logical margin properties if
+//    they are supported.
 // 3. Correct the font size `<h1>` elements within `<section>` and
 //    <article> contexts in Chrome, Firefox, and Safari.
 
 h1 {
   margin: 0 0 0.67em; // 1
+  margin-block-start: 0; // 2
   margin-block-end: 0.67em; // 2
+  margin-inline-start: 0; // 2
+  margin-inline-end: 0; // 2
   font-size: 2em; // 3
 }
 
@@ -261,6 +265,10 @@ h4,
 h5,
 h6 {
   margin-top: 0;
+  margin-block-start: 0;
+  margin-block-end: initial;
+  margin-inline-start: initial;
+  margin-inline-end: initial;
 }
 
 // 1. Limit the inline size of paragraphs to 92 characters.
@@ -283,7 +291,10 @@ blockquote,
 figure {
   margin: 0 0 1em;
   margin: 0 0 1rem;
+  margin-block-start: 0;
   margin-block-end: 1rem;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
 }
 
 // Set a normalized font-weight for legacy Edge and older versions of Safari
@@ -314,10 +325,18 @@ sup {
 
 sub {
   bottom: -0.25em;
+  inset-block-start: auto;
+  inset-block-end: -0.25em;
+  inset-inline-start: auto;
+  inset-inline-end: auto;
 }
 
 sup {
   top: -0.5em;
+  inset-block-start: -0.5em;
+  inset-block-end: auto;
+  inset-inline-start: auto;
+  inset-inline-end: auto;
 }
 
 // Correct the odd font inheritance and size scaling issues seen
@@ -373,6 +392,9 @@ kbd {
   top: -2px;
   top: -0.125rem;
   inset-block-start: -0.125rem;
+  inset-block-end: auto;
+  inset-inline-start: auto;
+  inset-inline-end: auto;
   display: inline-block;
   padding: 4px 8px;
   padding: 0.25rem 0.5rem;
@@ -395,7 +417,8 @@ kbd {
 
 // 1. Dont't allow content to break outside
 // 2. Remove top margin to avoid vertical margin collapse.
-// 3. Overwrite margin-bottom with margin-block-end for browsers that support it.
+// 3. Overwrite physical margin properties with logical margin properties for
+//    browsers that support it in order to improve internationalization.
 // 4. Having @viewport set causes scrollbars to overlap content in legacy Edge
 //    and IE11, so force a non-overlapping, non-auto-hiding scrollbar.
 
@@ -403,13 +426,18 @@ pre {
   overflow: auto; // 1
   margin: 0 0 1em; // 2
   margin: 0 0 1rem; // 2
+  margin-block-start: 0; // 3
   margin-block-end: 1rem; // 3
+  margin-inline-start: 0; // 3
+  margin-inline-end: 0; // 3
   -ms-overflow-style: scrollbar; // 4
 }
 
 :where(pre:has(code)) {
   max-width: 120ch;
+  max-inline-size: 120ch;
   max-height: 340px;
+  max-block-size: 340px;
   padding-block: 0.5rem;
   padding-inline: 1rem;
 }
@@ -421,7 +449,10 @@ output {
 address {
   margin-bottom: 1em;
   margin-bottom: 1rem;
+  margin-block-start: 0;
   margin-block-end: 1rem;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
   font-style: normal;
   line-height: inherit;
 }
@@ -471,6 +502,8 @@ caption {
   padding: 0.75rem 0;
   padding-block-start: 0.75rem;
   padding-block-end: 0.75rem;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
   color: #6c757d;
   caption-side: bottom;
   text-align: inherit;
@@ -494,6 +527,8 @@ hr {
   margin: 1rem 0;
   margin-block-start: 1rem;
   margin-block-end: 1rem;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
   color: inherit;
   opacity: 0.6;
 }
@@ -518,9 +553,12 @@ dfn {
 // Undo browser default inline start margin
 
 dd {
-  margin:0 0 0.5em;
+  margin: 0 0 0.5em;
   margin: 0 0 0.5rem;
+  margin-block-start: 0;
   margin-block-end: 0.5rem;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
 }
 
 // Reset all list styles for <ol> and <ul> elements used in <nav> elements
@@ -809,7 +847,10 @@ legend {
   border: 0;
   margin-bottom: 0.36364em;
   margin-bottom: 0.5rem;
+  margin-block-start: 0;
   margin-block-end: 0.5rem;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
   color: inherit;
   font-size: 22px;
   font-size: 1.375rem;
@@ -833,8 +874,6 @@ progress {
 }
 
 // Correct the text style of placeholders in Firefox, Chrome, Edge, Safari.
-// In modern browsers, make it easier to replace the existing styles by
-// just changing the color rather than remembering to overwrite opacity.
 
 :-moz-placeholder {
   color: inherit;
@@ -1059,8 +1098,8 @@ svg:not([fill]) {
 
 @media (prefers-reduced-motion: reduce) {
   *,
-  ::before,
-  ::after {
+  :before,
+  :after {
     background-attachment: initial !important; // 1
     -webkit-transition-duration: 0s !important; // 2
     -o-transition-duration: 0s !important; // 2
@@ -1141,8 +1180,7 @@ svg:not([fill]) {
   visibility: hidden;
 }
 
-// Contain floats with classic clearfix.
-// For all browsers (even IE 6 and up)
+// Contain floats with classic clearfix for all browsers.
 
 .clearfix {
   *zoom: 1;
