--- a/_betterize-slim.scss
+++ b/_betterize-slim.scss
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize-slim.scss -- Modern normalization, better cross-browser design ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.0 -- 03/23/2024 -------------------------------------------- ///
+/// version 2.0.1 -- 03/24/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -73,8 +73,6 @@
 // 13. Remove the blue tap box over buttons and links in some versions of
 //     iOS browsers for touch-enabled devices.
 // 14. Prevent adjustments of font size after orientation changes in iOS.
-// 15. Setting @viewport causes scrollbars to overlap content in legacy Edge
-//     and IE11, so force a non-overlapping, non-auto-hiding scrollbar.
 
 html {
   overflow-x: hidden; // 1
@@ -120,7 +118,6 @@ html {
   hanging-punctuation: first last; // 12
   -webkit-tap-highlight-color: transparent; // 13
   -webkit-text-size-adjust: 100%; // 14
-  -ms-overflow-style: scrollbar; // 15
 }
 
 // If user does not have prefers-reduced-motion on in their OS settings,
@@ -252,8 +249,6 @@ h5,
 h6 {
   margin-top: 0;
   margin-block-start: 0;
-  margin-block-end: initial;
-  margin-inline: initial;
 }
 
 // 1. Limit the inline size of paragraphs to 92 characters.
@@ -390,16 +385,13 @@ kbd {
 // 1. Dont't allow content to break outside
 // 2. Remove top margin to avoid vertical margin collapse.
 // 3. Overwrite physical margin properties with logical margin properties for
-//    browsers that support it in order to improve internationalization.
-// 4. Having @viewport set causes scrollbars to overlap content in legacy Edge
-//    and IE11, so force a non-overlapping, non-auto-hiding scrollbar.
+//    browsers that support it to improve internationalization.
 
 pre {
   overflow: auto; // 1
   margin: 0 0 1rem; // 2
   margin-block: 0 1rem; // 3
   margin-inline: 0; // 3
-  -ms-overflow-style: scrollbar; // 4
 }
 
 :where(pre:has(code)) {
@@ -409,8 +401,8 @@ pre {
   max-block-size: 340px;
   padding-block: 0.5rem;
   padding-inline: 1rem;
+  background-color: #eee;
 }
-
 
 output {
   display: inline-block;
@@ -664,13 +656,6 @@ a:not([href]):not([tabindex]) {
   }
 }
 
-// Show the overflow in legacy Edge (18-) and IE.
-
-button,
-input {
-  overflow: visible;
-}
-
 // Remove the inheritance of text transform in Edge and Firefox.
 
 button,
@@ -727,13 +712,6 @@ button::-moz-focus-inner,
   border-style: none;
 }
 
-input:disabled,
-select:disabled,
-textarea:disabled {
-  background-color: #e6e6e6;
-  cursor: not-allowed;
-}
-
 // Remove the border and padding in all browsers (opinionated)
 
 [type='color'],
@@ -755,12 +733,18 @@ input[type='month'] {
   -webkit-appearance: listbox;
 }
 
-// Remove the default vertical scrollbar in IE 10+ and restric horizontal
-// resizing in all browsers.
+// Remove the default vertical scrollbar and restric horizontal resizing.
 
 textarea {
   overflow: auto;
   resize: vertical;
+}
+
+input:disabled,
+select:disabled,
+textarea:disabled {
+  background-color: #e6e6e6;
+  cursor: not-allowed;
 }
 
 // Reset fieldsets to make them behave more like a standard block element and
@@ -811,14 +795,6 @@ progress {
   opacity: 0.54;
 }
 
-// 1. Correct the inability to style clickable types in iOS and Safari.
-// 2. Change font properties to `inherit` in Safari.
-
-::-webkit-file-upload-button {
-  font: inherit;
-  -webkit-appearance: button;
-}
-
 // Remove the additional :invalid styles in Firefox.
 
 :-moz-ui-invalid {
@@ -829,10 +805,18 @@ progress {
   box-shadow: none;
 }
 
+// 1. Correct the inability to style clickable types in iOS and Safari.
+// 2. Change font properties to `inherit` in Safari.
+
+::-webkit-file-upload-button {
+  font: inherit;
+  -webkit-appearance: button;
+}
+
 // Correct the cursor style of increment and decrement buttons in Chrome.
 
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -847,8 +831,8 @@ progress {
 // Remove the inner padding on search cancel buttons and search decorations in
 // Chrome and Safari on macOS.
 
-[type='search']::-webkit-search-cancel-button,
-[type='search']::-webkit-search-decoration {
+::-webkit-search-decoration,
+::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
 
