--- a/betterize.css
+++ b/betterize.css
@@ -4,7 +4,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css -- Modern normalization for better cross-browser design ----- /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* version 2.0.0 -- 03/23/2024 ----------------------------------------------- /
+/* version 2.0.1 -- 03/24/2024 ----------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -291,6 +291,7 @@ h4,
 h5,
 h6 {
   margin-top: 0;
+  margin-block-start: 0;
 }
 
 /*
@@ -451,7 +452,7 @@ kbd {
  * 1. Dont't allow content to break outside
  * 2. Remove top margin to avoid vertical margin collapse.
  * 3. Overwrite physical margin properties with logical margin properties for
- *    browsers that support it in order to improve internationalization.
+ *    browsers that support it to improve internationalization.
  * 4. Having @viewport set causes scrollbars to overlap content in legacy Edge
  *    and IE11, so force a non-overlapping, non-auto-hiding scrollbar.
  */
@@ -474,6 +475,7 @@ pre {
   max-block-size: 340px;
   padding-block: 0.5rem;
   padding-inline: 1rem;
+  background-color: #eee;
 }
 
 output {
@@ -837,13 +839,6 @@ button::-moz-focus-inner,
   border-style: none;
 }
 
-input:disabled,
-select:disabled,
-textarea:disabled {
-  background-color: #e6e6e6;
-  cursor: not-allowed;
-}
-
 /* Remove the padding and add the correct box sizing in IE 10- */
 
 [type='checkbox'],
@@ -874,14 +869,18 @@ input[type='month'] {
   -webkit-appearance: listbox;
 }
 
-/*
- * Remove the default vertical scrollbar in Legacy Edge and IE, and restric
- * horizontal resizing in all browsers.
- */
+/* Remove the default vertical scrollbar and restric horizontal resizing. */
 
 textarea {
   overflow: auto;
   resize: vertical;
+}
+
+input:disabled,
+select:disabled,
+textarea:disabled {
+  background-color: #e6e6e6;
+  cursor: not-allowed;
 }
 
 /*
@@ -941,6 +940,12 @@ progress {
   outline: 0 !important;
 }
 
+/* Fix inconsistent behavior in Legacy Edge and IE. */
+
+::-ms-expand {
+  display: none;
+}
+
 /* Correct the text style of placeholders in Firefox, Chrome, Edge, Safari. */
 
 :-moz-placeholder {
@@ -956,22 +961,6 @@ progress {
 ::placeholder {
   color: inherit;
   opacity: 0.54;
-}
-
-/*
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  font: inherit;
-  -webkit-appearance: button;
-}
-
-/* Fix inconsistent behavior in Legacy Edge and IE. */
-
-::-ms-expand {
-  display: none;
 }
 
 /* Remove the additional :invalid styles in Firefox. */
@@ -992,10 +981,20 @@ progress {
   box-shadow: none;
 }
 
+/*
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+
+::-webkit-file-upload-button {
+  font: inherit;
+  -webkit-appearance: button;
+}
+
 /* Correct the cursor style of increment and decrement buttons in Chrome. */
 
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -1012,8 +1011,8 @@ progress {
  * Chrome and Safari on macOS.
  */
 
-[type='search']::-webkit-search-cancel-button,
-[type='search']::-webkit-search-decoration {
+::-webkit-search-decoration,
+::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
 
