--- a/betterize.less
+++ b/betterize.less
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.less -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.0 -- 03/23/2024 -------------------------------------------- ///
+/// version 2.0.1 -- 03/24/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -266,9 +266,6 @@ h5,
 h6 {
   margin-top: 0;
   margin-block-start: 0;
-  margin-block-end: initial;
-  margin-inline-start: initial;
-  margin-inline-end: initial;
 }
 
 // 1. Limit the inline size of paragraphs to 92 characters.
@@ -418,7 +415,7 @@ kbd {
 // 1. Dont't allow content to break outside
 // 2. Remove top margin to avoid vertical margin collapse.
 // 3. Overwrite physical margin properties with logical margin properties for
-//    browsers that support it in order to improve internationalization.
+//    browsers that support it to improve internationalization.
 // 4. Having @viewport set causes scrollbars to overlap content in legacy Edge
 //    and IE11, so force a non-overlapping, non-auto-hiding scrollbar.
 
@@ -440,6 +437,7 @@ pre {
   max-block-size: 340px;
   padding-block: 0.5rem;
   padding-inline: 1rem;
+  background-color: #eee;
 }
 
 output {
@@ -780,13 +778,6 @@ button::-moz-focus-inner,
   border-style: none;
 }
 
-input:disabled,
-select:disabled,
-textarea:disabled {
-  background-color: #e6e6e6;
-  cursor: not-allowed;
-}
-
 // Remove the padding and add the correct box sizing in IE 10-
 
 [type='checkbox'],
@@ -816,12 +807,18 @@ input[type='month'] {
   -webkit-appearance: listbox;
 }
 
-// Remove the default vertical scrollbar in IE 10+ and restric horizontal
-// resizing in all browsers.
+// Remove the default vertical scrollbar and restric horizontal resizing.
 
 textarea {
   overflow: auto;
   resize: vertical;
+}
+
+input:disabled,
+select:disabled,
+textarea:disabled {
+  background-color: #e6e6e6;
+  cursor: not-allowed;
 }
 
 // Reset fieldsets to make them behave more like a standard block element and
@@ -873,6 +870,12 @@ progress {
   outline: 0 !important;
 }
 
+// Fix inconsistent behavior in Legacy Edge and IE
+
+::-ms-expand {
+  display: none;
+}
+
 // Correct the text style of placeholders in Firefox, Chrome, Edge, Safari.
 
 :-moz-placeholder {
@@ -888,20 +891,6 @@ progress {
 ::placeholder {
   color: inherit;
   opacity: 0.54;
-}
-
-// 1. Correct the inability to style clickable types in iOS and Safari.
-// 2. Change font properties to `inherit` in Safari.
-
-::-webkit-file-upload-button {
-  font: inherit;
-  -webkit-appearance: button;
-}
-
-// Fix inconsistent behavior in Legacy Edge and IE
-
-::-ms-expand {
-  display: none;
 }
 
 // Remove the additional :invalid styles in Firefox.
@@ -922,10 +911,18 @@ progress {
   box-shadow: none;
 }
 
+// 1. Correct the inability to style clickable types in iOS and Safari.
+// 2. Change font properties to `inherit` in Safari.
+
+::-webkit-file-upload-button {
+  font: inherit;
+  -webkit-appearance: button;
+}
+
 // Correct the cursor style of increment and decrement buttons in Chrome.
 
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -941,8 +938,8 @@ progress {
 // Remove the inner padding on search cancel buttons and search decorations in
 // Chrome and Safari on macOS.
 
-[type='search']::-webkit-search-cancel-button,
-[type='search']::-webkit-search-decoration {
+::-webkit-search-decoration,
+::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
 
