--- a/_betterize-slim.scss
+++ b/_betterize-slim.scss
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize-slim.scss -- Modern normalization, better cross-browser design ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.1 -- 03/24/2024 -------------------------------------------- ///
+/// version 2.0.2 -- 03/24/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -402,6 +402,11 @@ pre {
   padding-block: 0.5rem;
   padding-inline: 1rem;
   background-color: #eee;
+}
+
+:where(pre) code {
+  border-radius: 0;
+  background-color: unset;
 }
 
 output {
