--- a/betterize.css
+++ b/betterize.css
@@ -4,7 +4,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css -- Modern normalization for better cross-browser design ----- /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* version 2.0.1 -- 03/24/2024 ----------------------------------------------- /
+/* version 2.0.2 -- 03/24/2024 ----------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -476,6 +476,11 @@ pre {
   padding-block: 0.5rem;
   padding-inline: 1rem;
   background-color: #eee;
+}
+
+:where(pre) code {
+  border-radius: 0;
+  background-color: unset;
 }
 
 output {
