--- a/_betterize.sass
+++ b/_betterize.sass
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.sass -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.3 -- 03/25/2024 -------------------------------------------- ///
+/// version 2.0.4 -- 03/25/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -447,7 +447,8 @@ pre
 
 :where(pre) code
   border-radius: 0
-  background-color: unset
+  background-color: inherit
+  word-break: inherit
 
 output
   display: inline-block
