--- a/_betterize.scss
+++ b/_betterize.scss
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.scss -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.3 -- 03/25/2024 -------------------------------------------- ///
+/// version 2.0.4 -- 03/25/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -442,7 +442,8 @@ pre {
 
 :where(pre) code {
   border-radius: 0;
-  background-color: unset;
+  background-color: inherit;
+  word-break: inherit;
 }
 
 output {
