--- a/betterize-slim.less
+++ b/betterize-slim.less
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize-slim.less -- Modern normalization, better cross-browser design ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.4 -- 03/25/2024 -------------------------------------------- ///
+/// version 2.0.5 -- 03/26/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -201,11 +201,12 @@ body {
 
 // Ensure HTML5 structual elements and media elements display correctly.
 
+canvas,
 dialog,
 details,
 legend,
 main,
-canvas,
+summary,
 img,
 svg,
 video {
@@ -920,7 +921,13 @@ summary {
   cursor: pointer;
 }
 
-// Add the correct display in Safari.
+// https://html.spec.whatwg.org/C/#the-details-and-summary-elements
+// The specification doesn't have details > summary:first-of-type but
+// it is added because modern Chrome, Safari, and Firefox use
+// `summary { display: block }` as there are sites using `<summary>`
+// without `<details>`, and they expect that `<summary>` will not display
+// as a list-item when doing so. This will add the correct display back
+// for those browsers when `<summary>` is used with `<details>`.
 
 details > summary:first-of-type {
   display: list-item;
