--- a/_betterize-slim.sass
+++ b/_betterize-slim.sass
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize-slim.sass -- Modern normalization, better cross-browser design ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.4 -- 03/25/2024 -------------------------------------------- ///
+/// version 2.0.5 -- 03/26/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -226,16 +226,16 @@ body
 
 // Ensure HTML5 structual elements and media elements display correctly.
 
-dialog,
+canvas,
 details,
+dialog,
 legend,
 main,
-canvas,
+summary,
 img,
 svg,
 video
   display: block
-
 
 // Better balance blocks of text in headings, blockqutoes, and figure captions.
 // See: https://developer.chrome.com/docs/css-ui/css-text-wrap-balance
@@ -418,7 +418,6 @@ pre
   border-radius: 0
   background-color: inherit
   word-break: inherit
-
 
 output
   display: inline-block
@@ -882,14 +881,19 @@ img
   &[src$='.webp']
     image-rendering: smooth
 
-
 iframe
   border: 0
 
 summary
   cursor: pointer
 
-// Add the correct display in Safari.
+// https://html.spec.whatwg.org/C/#the-details-and-summary-elements
+// The specification doesn't have details > summary:first-of-type but
+// it is added because modern Chrome, Safari, and Firefox use
+// `summary { display: block }` as there are sites using `<summary>`
+// without `<details>`, and they expect that `<summary>` will not display
+// as a list-item when doing so. This will add the correct display back
+// for those browsers when `<summary>` is used with `<details>`.
 
 details > summary:first-of-type
   display: list-item
@@ -933,7 +937,6 @@ svg:not([fill])
   &:not(:focus)
     position: absolute
     clip: rect(0, 0, 0, 0)
-
 
 // Respect prefers-reduced-motion being set by the user in their OS or browser.
 // 1. Remove fixed background attachments when prefers-reduced-motion is on.
