--- a/_betterize.sass
+++ b/_betterize.sass
@@ -4,7 +4,7 @@
 /// ------------------------------------------------------------------------ ///
 /// betterize.sass -- Modern normalization for better cross-browser design - ///
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------ ///
-/// version 2.0.4 -- 03/25/2024 -------------------------------------------- ///
+/// version 2.0.5 -- 03/26/2024 -------------------------------------------- ///
 /// ------------------------------------------------------------------------ ///
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -239,9 +239,9 @@ body
 // Ensure HTML5 structual elements and media elements
 // display correctly in all browsers.
 
-article, aside, dialog, figcaption, figure,
-footer, header, hgroup, main, nav, section,
-canvas, details, legend, img, svg, video
+article, aside, canvas, details, dialog,
+figcaption, figure, footer, header, hgroup,
+legend, main, nav, section, summary, img, svg, video
   display: block
 
 // Better balance blocks of text in headings, blockqutoes, and figure captions.
@@ -979,14 +979,19 @@ img
   &[src$='.webp']
     image-rendering: smooth
 
-
 iframe
   border: 0
 
 summary
   cursor: pointer
 
-// Add the correct display in Safari.
+// https://html.spec.whatwg.org/C/#the-details-and-summary-elements
+// The specification doesn't have details > summary:first-of-type but
+// it is added because modern Chrome, Safari, and Firefox use
+// `summary { display: block }` as there are sites using `<summary>`
+// without `<details>`, and they expect that `<summary>` will not display
+// as a list-item when doing so. This will add the correct display back
+// for those browsers when `<summary>` is used with `<details>`.
 
 details > summary:first-of-type
   display: list-item
@@ -1035,7 +1040,6 @@ svg:not([fill])
   &:not(:focus)
     position: absolute
     clip: rect(0, 0, 0, 0)
-
 
 // Respect prefers-reduced-motion being set by the user in their OS or browser.
 // 1. Remove fixed background attachments when prefers-reduced-motion is on.
